2024-02-13T00:30:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7879873522 # 111
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-13
* notice: last 14d: unq all: 1 21
* notice: prev accum: outdated-unq outdated-all / unq all: 326 680 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 327 683 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-29] / []

2024-02-11T16:07:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7863135971 # 107
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-11
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 325 678 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 326 680 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-28] / []

2024-02-10T16:07:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7855977144 # 104
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-10
* notice: last 14d: unq all: 1 26
* notice: prev accum: outdated-unq outdated-all / unq all: 324 676 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 325 678 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-27] / []

2024-02-09T16:07:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7846571067 # 101