@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-13T00:30:33Z",
-  "count_outdated" : 683,
-  "uniques_outdated" : 327,
+  "timestamp" : "2024-02-14T00:29:54Z",
+  "count_outdated" : 685,
+  "uniques_outdated" : 328,
   "count" : 704,
   "uniques" : 338,
   "clones" : [
-    {
-      "timestamp": "2024-01-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-31T00:00:00Z",
       "count": 2,
